syntax = "proto3";

package hello;

option go_package = "internal/grpcservice/protogenerate/hello";

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}